--- a/Gen_text_from_image_GeminiProVision.ipynb
+++ b/Gen_text_from_image_GeminiProVision.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/O5lJdQd+cjDEU6k5nNgk",
+      "authorship_tag": "ABX9TyNnDdLFiLgGI/sZlqIT5mYm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -180,7 +180,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 34
         },
         "id": "wEdry4sQ8Sv0",
         "outputId": "46bc1613-6212-46ed-fe2b-2d5611fa7de1"
@@ -224,9 +224,35 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "prompt= 'what are the ingredients'\n",
+        "response = model.generate_content([img, prompt])\n",
+        "print(response.text)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "id": "6ckvwzuh86Zh",
+        "outputId": "7c070c72-fef4-4458-f7a8-21c3a65b38e6"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " There are no ingredients listed.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "6ckvwzuh86Zh"
+        "id": "O92wXk9i9eTM"
       },
       "execution_count": null,
       "outputs": []
